# Achievement

./: .gitattributes  .gitignore  ACHIEVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ACHIEVEMENT_LEVELS.md  DISCUSSIONS_GUIDE.md  DISCUSSION_IDEAS.md  PAIR_EXTRAORDINAIRE.md  PUBLIC_SPONSOR.md  STARSTRUCK_PLAN.md  USAGE.md
scripts/: check-progress.sh  lint.sh
src/repoaudit/: __init__.py  __main__.py  checks.py  cli.py  constants.py  report.py
tests/: test_checks.py  test_cli.py  test_constants_and_edges.py  test_report.py
