[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoaudit"
version = "0.1.0"
description = "CLI léger pour auditer la qualité communautaire d'un dépôt GitHub local"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "AVTAVANTTOUT2" },
]
keywords = ["github", "repository", "audit", "cli", "open-source", "quality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
repoaudit = "repoaudit.cli:main"

[project.urls]
Homepage = "https://github.com/AVTAVANTTOUT2/Achievement"
Repository = "https://github.com/AVTAVANTTOUT2/Achievement"
Issues = "https://github.com/AVTAVANTTOUT2/Achievement/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
